# my-interval

./: Cargo.toml  README.md
src/: bound_point.rs  interval.rs  lib.rs
src/bound_point/: bound_point.rs  bound_proximity.rs  bound_value.rs  mod.rs
